<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="SingleSensor_DataModel" Id="{38c3461e-40f9-42cd-bc59-05c459f1f481}">
    <Declaration><![CDATA[TYPE SingleSensor_DataModel :
STRUCT
	LineName	: STRING(40);
	MachineName	: STRING(40);
	SensorName	: STRING(40);
	SensorValue	: REAL;
	TimeStamp 	: ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>