<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="PRG_12_OilContaminationAnalytics" Id="{9509c8f2-193f-4e3b-9287-dc1013adfb72}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_12_OilContaminationAnalytics
VAR
	OilDiffPressSensor: GenericSensor;
	
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}			// read only
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	OilDiffPressSensorStruct			: SingleSensor_DataModel;
END_VAR
]]></Declaration>
    <Implementation>
      <CFC>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="CFCImplementationObject">
              <o n="Items" t="CFCItemList">
                <l2 n="InnerList">
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">35L</v>
                    <v n="DestPinId">45L</v>
                    <v n="Id">94L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"1, 1, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">32L</v>
                    <v n="DestPinId">44L</v>
                    <v n="Id">87L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"1, 1, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">29L</v>
                    <v n="DestPinId">43L</v>
                    <v n="Id">86L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"1, 1, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">26L</v>
                    <v n="DestPinId">42L</v>
                    <v n="Id">85L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"1, 1, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">23L</v>
                    <v n="DestPinId">41L</v>
                    <v n="Id">84L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"1, 3, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">38L</v>
                    <v n="DestPinId">46L</v>
                    <v n="Id">78L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">23L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_const.LineName"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">24L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"19, 14, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">22L</v>
                  </o>
                  <o t="CFCOutputElement">
                    <o n="Input" t="CFCInputPinWithSetReset">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="ProcessValue">""</v>
                      <v n="Access" t="ProcessValueAccess">None</v>
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">108L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"OilDiffPressSensorStruct"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">109L</v>
                    </o>
                    <v n="PageArea">4</v>
                    <v n="Bounds">"52, 14, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">107L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">26L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_const.MachineName"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">27L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"19, 15, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">25L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">29L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_const.DiffPressSensor1"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">30L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"19, 16, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">28L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">32L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_SW.Unix_TimeStamp"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">33L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"19, 17, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">31L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">35L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_Visu.OilDiffPressure"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">36L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"19, 18, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">34L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">38L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_Visu.LineRunning"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">39L</v>
                    </o>
                    <v n="PageArea">3</v>
                    <v n="Bounds">"19, 19, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">37L</v>
                  </o>
                  <o t="CFCBoxElement">
                    <o n="Inputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCInputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">41L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">42L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">43L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">44L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">45L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="IsExtensiblePin">false</v>
                          <v n="ProcessValue">""</v>
                          <v n="Access" t="ProcessValueAccess">None</v>
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">46L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Outputs" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCOutputPin">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Negated">false</v>
                          <v n="SetReset" t="SetReset">None</v>
                          <v n="SetResetRef" t="SetResetRef">None</v>
                          <v n="PretendsToBeConnected">false</v>
                          <v n="Id">100L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Texts" t="CFCItemList">
                      <l2 n="InnerList" cet="CFCText">
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"LineName"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">50L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"MachineName"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">51L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"SensorName"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">52L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"TimeStamp"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">53L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"Value"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">54L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"Enable"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">55L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"OpcUaVal"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">101L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"GenericSensor"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">59L</v>
                        </o>
                        <o>
                          <v n="Bounds">"0, 0, 0, 0"</v>
                          <n n="ElementGroupId" />
                          <v n="Text">"OilDiffPressSensor"</v>
                          <v n="Modifiable">true</v>
                          <v n="Id">60L</v>
                        </o>
                      </l2>
                    </o>
                    <o n="Parameters" t="CFCItemList">
                      <l2 n="InnerList" />
                    </o>
                    <n n="PreparedParameters" />
                    <v n="PageArea">0</v>
                    <v n="Bounds">"37, 12, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="EnEno">false</v>
                    <v n="KindOfCall" t="KindOfCall">FunctionBlock</v>
                    <v n="ContainsExtensibleInputs">false</v>
                    <v n="Forced">false</v>
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">40L</v>
                  </o>
                  <o t="CFCInputElement">
                    <o n="Output" t="CFCOutputPin">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Negated">false</v>
                      <v n="SetReset" t="SetReset">None</v>
                      <v n="SetResetRef" t="SetResetRef">None</v>
                      <v n="PretendsToBeConnected">false</v>
                      <v n="Id">92L</v>
                    </o>
                    <o n="Text" t="CFCText">
                      <v n="Bounds">"0, 0, 0, 0"</v>
                      <n n="ElementGroupId" />
                      <v n="Text">"GVL_SW.DiffPressSensor"</v>
                      <v n="Modifiable">true</v>
                      <v n="Id">93L</v>
                    </o>
                    <v n="PageArea">0</v>
                    <v n="Bounds">"6, 18, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="OwningPageId">-1L</v>
                    <v n="Id">91L</v>
                  </o>
                  <o t="CFCConnection">
                    <v n="Bounds">"0, 0, 0, 0"</v>
                    <n n="ElementGroupId" />
                    <v n="SourcePinId">100L</v>
                    <v n="DestPinId">108L</v>
                    <v n="Id">110L</v>
                  </o>
                </l2>
              </o>
              <n n="ParameterInitializationMethodGenerator" />
              <o n="RoutingPathTable" t="CFCRoutingPathTable">
                <d2 n="InnerDictionary" ckt="CFCRoutingConnection" cvt="CFCPointList">
                  <o>
                    <v n="ConnectionId">86L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">31</v>
                      <v n="Y">16</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">31</v>
                        <v n="Y">16</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">36</v>
                        <v n="Y">16</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">78L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">29</v>
                      <v n="Y">19</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">29</v>
                        <v n="Y">19</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">36</v>
                        <v n="Y">19</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">84L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">29</v>
                      <v n="Y">14</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">29</v>
                        <v n="Y">14</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">36</v>
                        <v n="Y">14</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">85L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">30</v>
                      <v n="Y">15</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">30</v>
                        <v n="Y">15</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">36</v>
                        <v n="Y">15</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">87L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">30</v>
                      <v n="Y">17</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">30</v>
                        <v n="Y">17</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">36</v>
                        <v n="Y">17</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">110L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">49</v>
                      <v n="Y">14</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">49</v>
                        <v n="Y">14</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">51</v>
                        <v n="Y">14</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                  <o>
                    <v n="ConnectionId">94L</v>
                    <o n="StartPoint" t="CFCPoint">
                      <v n="X">30</v>
                      <v n="Y">18</v>
                      <v n="IsJoint">false</v>
                      <v n="Flags">0</v>
                    </o>
                    <v n="Unroutable">false</v>
                    <n n="CorrespondingPageId" />
                    <v n="Locked">false</v>
                  </o>
                  <o>
                    <l2 n="InnerList" cet="CFCPoint">
                      <o>
                        <v n="X">30</v>
                        <v n="Y">18</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">68</v>
                      </o>
                      <o>
                        <v n="X">36</v>
                        <v n="Y">18</v>
                        <v n="IsJoint">false</v>
                        <v n="Flags">97</v>
                      </o>
                    </l2>
                  </o>
                </d2>
              </o>
              <v n="AutoSizeCanvas">true</v>
              <v n="CanvasWidth">65</v>
              <v n="CanvasHeight">22</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="CFCBoxElement">{f5becf35-b1f3-4274-b411-81d4b63a1516}</Type>
            <Type n="CFCConnection">{5ae2e111-ecff-4a21-b647-2d4da63f8db7}</Type>
            <Type n="CFCImplementationObject">{32d3375e-c010-41e2-9e43-b2fbf4f2b374}</Type>
            <Type n="CFCInputElement">{d51129f5-df27-4886-99d1-c564d2e2c1f6}</Type>
            <Type n="CFCInputPin">{c994f6e0-311a-4a1c-bc38-75fe34892406}</Type>
            <Type n="CFCInputPinWithSetReset">{5c3476a8-05c5-430e-861c-9cfa51d68ca8}</Type>
            <Type n="CFCItemList">{cd57ba20-558b-4b98-96c1-73c6000c3087}</Type>
            <Type n="CFCOutputElement">{8d9e2b78-3efe-4fe4-8160-f3a7381ddd8f}</Type>
            <Type n="CFCOutputPin">{65582d84-cf18-4ca0-be59-bf5a3d00b8f8}</Type>
            <Type n="CFCPoint">{b3e42b54-b8f2-45d3-825d-747f82f244a0}</Type>
            <Type n="CFCPointList">{584effbc-813e-443a-bf78-ad9c8d49db41}</Type>
            <Type n="CFCRoutingConnection">{93c117eb-0884-403b-b01e-28b89f47e041}</Type>
            <Type n="CFCRoutingPathTable">{4b8bcc79-5980-4868-b49e-005a8148859b}</Type>
            <Type n="CFCText">{72f2b13f-5349-4a8a-bbe6-2bccf3f42179}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="KindOfCall">{77f43dfe-ca6a-4869-828f-7609d8ed6ea6}</Type>
            <Type n="ProcessValueAccess">{88453c7d-d652-4a27-a1b0-a1953be49a5c}</Type>
            <Type n="SetReset">{24449d48-c96a-49c4-b9d1-a4ea34aedce3}</Type>
            <Type n="SetResetRef">{233bc97c-69fe-4d29-b40e-a9a9b854044e}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </CFC>
    </Implementation>
  </POU>
</TcPlcObject>